feat(server/api): added queryPlain endpoint for full text search
